dossier: fix layout of form action buttons on IE11
Fix #2311

--- a/app/assets/stylesheets/new_design/forms.scss
+++ b/app/assets/stylesheets/new_design/forms.scss
@@ -283,7 +283,6 @@
   .send-wrapper {
     display: flex;
     width: 100%;
-    justify-content: flex-end;
     margin-top: $default-padding;
     margin-bottom: 2 * $default-padding;
 
